<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="bottom"
    style="@style/popUpDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreateContactFragment"
    android:background="@drawable/add_contact_dialog_background"
    tools:ignore="spUsage, RtlHardcoded, TextFields">

    <TextView
        android:id="@+id/add_contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:textColor="@color/contact_text_color"
        android:textSize="18dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/add_new_contact_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorEditTextInput"
        android:textSize="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="start"
        android:focusableInTouchMode="true"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@+id/add_contact_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/add_last_name"
        android:textColorHint="@color/colorEditTextInput"
        android:inputType="text"
        android:textColor="@color/colorEditTextInput"
        android:textSize="16dp"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorEditTextInput"
        android:inputType="text"
        android:textColor="@color/colorEditTextInput"
        android:textSize="16dp"
        android:focusableInTouchMode="true"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="16dp"
        android:textColor="@color/colorEditTextInput"
        android:textColorHint="@color/colorEditTextInput"
        android:textSize="16dp"
        android:inputType="number"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cancel_button_background_grey"
        android:text="@string/cancel"
        android:textColor="@color/cancel_button_colour"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/add_contact_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/app_button_background"
        android:text="@string/add_contact_text"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    <include
        android:id="@+id/loader"
        layout="@layout/view_loader"
        android:visibility="gone"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>