<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:ignore="RtlCompat, spUsage"
    app:cardElevation="1dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contactItem"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/contact_initials"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:background="@drawable/image_circle_backgroud"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            tools:textSize="16dp"
            tools:text="@string/name"
            android:gravity="center_vertical|start"
            android:textColor="@color/name_text_color"
            app:layout_constraintStart_toEndOf="@+id/contact_initials"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/contact_phone_number"
            android:layout_width="0dp"
            android:layout_height="30dp"
            tools:text="@string/phone_number_text"
            android:textSize="14dp"
            android:gravity="center_vertical|start"
            android:layout_marginStart="32dp"
            android:textColor="@color/name_text_color"
            app:layout_constraintStart_toEndOf="@+id/contact_initials"
            app:layout_constraintTop_toBottomOf="@+id/contact_name" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/name_text_color"
            android:textSize="13dp"
            android:gravity="start"
            app:layout_constraintStart_toEndOf="@+id/contact_initials"
            app:layout_constraintTop_toBottomOf="@+id/contact_phone_number"
            tools:text="@string/email_sample" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>